posts: Add base url 'namu'

--- a/_posts/2020-05-23-namu.markdown
+++ b/_posts/2020-05-23-namu.markdown
@@ -3,7 +3,7 @@ title:  소나무
 date:   2020-05-23 06:30:00 +0900
 author: namu
 categories: daily
-permalink: "/daily/:year/:month/:day/:title"
+permalink: "/namu/daily/:year/:month/:day/:title"
 image: sonamu01.jpg
 image-view: true
 ---
@@ -17,3 +17,14 @@ image-view: true
 
 생각하면 소나무보다 훨씬 더 많은 것을 소비하면서도 무엇 하나 변변히 이루어내지 못하고 있는 나에게 소광리의 솔숲은
 마치 회초리를 들고 기다리는 엄한 스승 같았습니다.
+
+어젯밤 별 한 개 쳐다볼 때마다 100원씩 내라던 당신의 마이 생각납니다.
+오늘은 소나무 한 그루 만져볼 때마다 돈을 내야겠지요.
+사실 서울에서는 그보다 못한 것을 그보다 비싼 값을 치르며 살아가고 있다는 생각이 듭니다.
+언젠가 경복궁 복원공사현장에 가 본 적이 있습니다.
+일제가 파괴하고 변형시킨 조선 정궁의 기본 궁제를 되찾는 일이 당연하다고 생각하였습니다.
+그러나 막상 오늘 이곳 소광리 소나무숲에 와서는 그러한 생각을 반성하게 됩니다.
+경복궁의 복원에 소요되는 나무가 원목으로 200만 재, 11톤 트럭으로 500대라는 엄청난 양이라고 합니다.
+소나무가 없어져가고 있는 지금에 와서도기어이 소나무로 복원한다는 것이 무리한 고집이라고 생각됩니다.
+수많은 소나무들이 베어져 눕혀진 광경이라니 감히 상상할 수가 없습니다.
+그것은 이를테면 고난에 찬 몇 백만 년의 세월을 잘라내는 것이나 마찬가지입니다.
