--- a/_posts/2020-05-06-new-post.markdown
+++ b/_posts/2020-05-06-new-post.markdown
@@ -3,7 +3,7 @@ title:  "새 글"
 date:   2020-05-06 19:26:23 +0900
 author: daesungra
 categories: daily
-permalink: "/daily/:year/:month/:day/:title"
+permalink: "/namu/daily/:year/:month/:day/:title"
 image: mountains.jpg
 image-view: false
 ---
