--- a/_posts/2020-05-23-namu.markdown
+++ b/_posts/2020-05-23-namu.markdown
@@ -3,7 +3,7 @@ title:  소나무
 date:   2020-05-23 06:30:00 +0900
 author: namu
 categories: daily
-permalink: "/namu/daily/:year/:month/:day/:title"
+permalink: "/daily/:year/:month/:day/:title"
 image: sonamu01.jpg
 image-view: true
 ---
