namu: Add namu contents

--- a/_posts/2020-05-23-namu.markdown
+++ b/_posts/2020-05-23-namu.markdown
@@ -18,13 +18,32 @@ image-view: true
 생각하면 소나무보다 훨씬 더 많은 것을 소비하면서도 무엇 하나 변변히 이루어내지 못하고 있는 나에게 소광리의 솔숲은
 마치 회초리를 들고 기다리는 엄한 스승 같았습니다.
 
-어젯밤 별 한 개 쳐다볼 때마다 100원씩 내라던 당신의 마이 생각납니다.
+어젯밤 별 한 개 쳐다볼 때마다 100원씩 내라던 당신의 말이 생각납니다.
 오늘은 소나무 한 그루 만져볼 때마다 돈을 내야겠지요.
 사실 서울에서는 그보다 못한 것을 그보다 비싼 값을 치르며 살아가고 있다는 생각이 듭니다.
 언젠가 경복궁 복원공사현장에 가 본 적이 있습니다.
 일제가 파괴하고 변형시킨 조선 정궁의 기본 궁제를 되찾는 일이 당연하다고 생각하였습니다.
 그러나 막상 오늘 이곳 소광리 소나무숲에 와서는 그러한 생각을 반성하게 됩니다.
 경복궁의 복원에 소요되는 나무가 원목으로 200만 재, 11톤 트럭으로 500대라는 엄청난 양이라고 합니다.
-소나무가 없어져가고 있는 지금에 와서도기어이 소나무로 복원한다는 것이 무리한 고집이라고 생각됩니다.
+소나무가 없어져가고 있는 지금에 와서도 기어이 소나무로 복원한다는 것이 무리한 고집이라고 생각됩니다.
 수많은 소나무들이 베어져 눕혀진 광경이라니 감히 상상할 수가 없습니다.
 그것은 이를테면 고난에 찬 몇 백만 년의 세월을 잘라내는 것이나 마찬가지입니다.
+
+우리가 생각 없이 잘라내고 있는 것이 어찌 소나무만이겠습니까.
+없어도 되는 물건을 만들기 위하여 없어서는 안될 것들을 마구 잘라내고 있는가 하면
+아예 사람을 잘라내는 일마저 서슴지 않는 것이 우리의 현실이기 때문입니다.
+우리가 살고 있는 이 지구 위의 유일한 생산자는 식물이라던 당신의 말이 생각납니다.
+동물은 완벽한 소비자입니다. 그 중에서도 최대의 소비자가 바로 사람입니다.
+사람들의 생산이란 고작 식물들이 만들어놓은 것이나 땅 속에 묻힌 것을 파내어 소비하는 것에 지나지 않습니다.
+쌀로 밥을 짓는 일을 두고 밥의 생산이라고 할 수 없는 것이나 마찬가지입니다.
+생산의 주체가 아니라 소비의 주체이며 급기야는 소비의 객체로 전락되고 있는 것이 바로 사람입니다.
+자연을 오로지 생산의 요소로 규정하는 경제학의 폭력성이 이 소광리에서만큼 분명하게 부각되는 곳이 달리 없을 듯합니다.
+
+산판일을 하는 사람들은 큰 나무를 베어낸 그루터기에 올라서지 않는 것이 불문율로 되어 있다고 합니다.
+잘린 부분에서 올라오는 나무의 노기가 사람을 해치기 때문입니다.
+어찌 노하는 것이 소나무뿐이겠습니까. 온 산천의 아우성이 들리는 듯합니다.
+당신의 말처럼 소나무는 우리의 삶과 가장 가까운 자리에서 우리와 함께 풍상을 겪어온 혈육 같은 나무입니다.
+사람이 태어나면 금줄에 솔가지를 꽂아 부정을 물리고 사람이 죽으면 소나무 관 속에 누워 솔밭에 묻히는 것이 우리의 일생이라 하였습니다.
+그리고 그 무덤 속의 한을 달래주는 것이 바로 은은한 솔바람입니다.
+솔바람뿐만이 아니라 솔빛, 솔향 등 어느 것 하나 우리의 정서 깊숙이 들어와 있지 않는 것이 없습니다.
+더구나 소나무는 고절(高節)의 상징으로 우리의
