--- a/_posts/2020-05-23-namu.markdown
+++ b/_posts/2020-05-23-namu.markdown
@@ -46,4 +46,29 @@ image-view: true
 사람이 태어나면 금줄에 솔가지를 꽂아 부정을 물리고 사람이 죽으면 소나무 관 속에 누워 솔밭에 묻히는 것이 우리의 일생이라 하였습니다.
 그리고 그 무덤 속의 한을 달래주는 것이 바로 은은한 솔바람입니다.
 솔바람뿐만이 아니라 솔빛, 솔향 등 어느 것 하나 우리의 정서 깊숙이 들어와 있지 않는 것이 없습니다.
-더구나 소나무는 고절(高節)의 상징으로 우리의
+더구나 소나무는 고절(高節)의 상징으로 우리의 정신을 지탱하는 기둥이 되고 있습니다.
+금강송의 곧은 둥치에서뿐만 아니라 암석지의 굽고 뒤틀린 나무에서도 우리는 곧은 지조를 읽어낼 줄 압니다.
+오늘날의 상품미학과는 전혀 다른 미학을 우리는 일찍부터 가꾸어놓고 있었습니다.
+
+나는 문득 당신이 진정 사랑하는 것이 소나무가 아니라 소나무 같은 '사람' 이라는 생각이 들었습니다.
+메마른 땅을 지키고 있는 수많은 사람들이란 생각이 들었습니다.
+문득 지금쯤 서울거리의 자동차 속에 앉아 있을 당신을 생각했습니다.
+그리고 외딴 섬에 갇혀 목말라 하는 남산의 소나무들을 생각했습니다.
+남산의 소나무가 이제는 더이상 살아남기를 포기하고 자손들이나 기르겠다는 체념으로
+무수한솔방울을 달고 있다는 당신의 이야기는 우리를 슬프게 합니다.
+더구나 그 솔방울들이 싹을 키울 땅마저 황폐해버렸다는 사실이 우리를 더욱 암담하게 합니다.
+그러나 그보다 더 무서운 것이 아카시아와 활엽수의 침습이라니 놀라지 않을 수 없습니다.
+척박한 땅을 겨우겨우 가꾸어놓으면 이내 다른 경쟁수들이 쳐들어와 소나무를 몰아내고 만다는 것입니다.
+
+나는 마치 꾸중 듣고 집 나오는 아이처럼 산을 나왔습니다.
+솔방울 한 개를 주워들고 내려오면서 생각하였습니다.
+거인에게 잡아먹힌 소년이 솔방울을 손에 쥐고 있었기 때문에 다시 소생했다는 신화를 생각하였습니다.
+당시닝 나무를 사랑한다면 솔방울도 사랑해야 합니다.
+무수한 솔방울들의 끈질긴 저력을 신뢰해야 합니다.
+
+언젠가 붓글씨로 써드렸던 글귀를 엽서 끝에 적습니다.
+
+
+> "처음으로 쇠가 만들어졌을 때 세상의 모든 나무들이 두려움에 떨었다.<br/>
+> 그러나 어느 생각 깊은 나무가 말했다. 두려워할 것 없다.<br/>
+> 우리들이 자루가 되어주지 않는 한 쇠는 결코 우리를 해칠 수 없는 법이다."
