post: Modify posts

--- a/_posts/daily/2020-05-06-new-post.markdown
+++ b/_posts/daily/2020-05-06-new-post.markdown
@@ -8,10 +8,9 @@ image: mountains.jpg
 image-view: false
 ---
 
-시작이란 말은 언제나 아름답다.
+시작이란 말은 언제나 가슴 떨리고 아름답다.
 
-소나무에게도,<br/>
-나에게도,<br/>
-우리 가족에게도, 그리고 우리 민족에게도 언제나 시작은 있었다.
+나에게도, 우리 가족에게도, 우리 민족에게도,<br/>
+그리고 소나무에게도 언제나 시작은 있었다.
 
 새롭게 시작하는 모든 사람들을 언제나 사랑하고 축복한다.
