--- a/_posts/daily/2020-05-23-namu.markdown
+++ b/_posts/daily/2020-05-23-namu.markdown
@@ -1,7 +1,7 @@
 ---
 title:  소나무
 date:   2020-05-23 06:30:00 +0900
-author: namu
+author: namu / 신영복 선생님의 '나무야 나무야' 中
 categories: daily
 permalink: "/daily/:year/:month/:day/:title"
 image: sonamu01.jpg
@@ -63,7 +63,7 @@ image-view: true
 나는 마치 꾸중 듣고 집 나오는 아이처럼 산을 나왔습니다.
 솔방울 한 개를 주워들고 내려오면서 생각하였습니다.
 거인에게 잡아먹힌 소년이 솔방울을 손에 쥐고 있었기 때문에 다시 소생했다는 신화를 생각하였습니다.
-당시닝 나무를 사랑한다면 솔방울도 사랑해야 합니다.
+당신이 나무를 사랑한다면 솔방울도 사랑해야 합니다.
 무수한 솔방울들의 끈질긴 저력을 신뢰해야 합니다.
 
 언젠가 붓글씨로 써드렸던 글귀를 엽서 끝에 적습니다.
