post: Modify posts

--- a/_posts/daily/2020-05-23-namu.markdown
+++ b/_posts/daily/2020-05-23-namu.markdown
@@ -8,7 +8,11 @@ image: sonamu01.jpg
 image-view: true
 ---
 
-오늘은 당신이 가르쳐준 태백산맥 속의 소광리 소나무숲에서 이 엽서를 띄웁니다.
+> "처음으로 쇠가 만들어졌을 때 세상의 모든 나무들이 두려움에 떨었다.<br/>
+> 그러나 어느 생각 깊은 나무가 말했다. 두려워할 것 없다.<br/>
+> 우리들이 자루가 되어주지 않는 한 쇠는 결코 우리를 해칠 수 없는 법이다."
+
+<br/>오늘은 당신이 가르쳐준 태백산맥 속의 소광리 소나무숲에서 이 엽서를 띄웁니다.
 
 아침 햇살에 빛나는 소나무숲에 들어서니 당신이 사람보다 나무를 더 사랑하는 까닭을 알 것 같습니다.
 200년 300년, 더러는 500년의 풍상을 겪은 소나무들이 골짜기에 가득합니다.
@@ -66,9 +70,4 @@ image-view: true
 당신이 나무를 사랑한다면 솔방울도 사랑해야 합니다.
 무수한 솔방울들의 끈질긴 저력을 신뢰해야 합니다.
 
-언젠가 붓글씨로 써드렸던 글귀를 엽서 끝에 적습니다.
-
-
-> "처음으로 쇠가 만들어졌을 때 세상의 모든 나무들이 두려움에 떨었다.<br/>
-> 그러나 어느 생각 깊은 나무가 말했다. 두려워할 것 없다.<br/>
-> 우리들이 자루가 되어주지 않는 한 쇠는 결코 우리를 해칠 수 없는 법이다."
+언젠가 붓글씨로 써드렸던 [글귀](#sonamu)를 엽서 끝에 적습니다.
