python-exception-post: Comlete post

--- a/_posts/daily/2020-05-06-new-post.markdown
+++ b/_posts/daily/2020-05-06-new-post.markdown
@@ -11,6 +11,6 @@ image-view: true
 시작이란 말은 언제나 가슴 떨리고 아름답다.
 
 나에게도, 우리 가족에게도, 우리 민족에게도.<br/>
-그리고 소나무에게도 언제나 시작은 있었다.
+그리고 500년 우리 곁에 살아온 소나무에게도 언제나 시작은 있었다.
 
 새롭게 시작하는 모든 사람들을 언제나 사랑하고 축복한다.
