--- a/_posts/to-demian/2020-06-14-to-demian.markdown
+++ b/_posts/to-demian/2020-06-14-to-demian.markdown
@@ -2,8 +2,8 @@
 title:  2020-06-14
 date:   2020-06-14 11:50:00 +0900
 author: namu
-categories: daily
-permalink: "/daily/:year/:month/:day/:title"
+categories: to-demian
+permalink: "/to-demian/:year/:month/:day/:title"
 image: demian.jpg
 image-view: true
 ---
