--- a/_posts/to-demian/2019-07-07-to-demian.markdown
+++ b/_posts/to-demian/2019-07-07-to-demian.markdown
@@ -40,7 +40,7 @@ image-view: true
 그래서 그 다음 절에는 영으로 기도하고, 또 깨친 마음으로도 기도하겠다고 말합니다.
 일반적으로 방언을 통역하는 것은 누구에게나 주어진 은사가 아닌 것으로 보이므로(12:10),
 차라리 통역할 수 있기를 간구하라는 말은 현재 자신이(영과 마음이) 하는 기도의 의미를 앎으로써
-보다 깊은 뜻을 가지고 진심의 기도를 할 것을 당부하는 것으로 보입니다.
+보다 깊은 뜻을 가지고 진심의 기도할 것을 당부하는 것으로 보입니다.
 
 나아가 다른 사람들이 알아들을 수 있는 말로 예언하는 것이 중요하다고 하는 것은,
 특히 고린도 교회 사람들의 경우 방언을 함으로써 분명한 말을 하지 않음(14:9)으로 인해
@@ -71,14 +71,14 @@ image-view: true
 그 본질에는 자기 자신뿐만 아니라 교회 공동체의 유익을 생각하는 마음이 존재해야 합니다.
 개인(영+마음)의 덕을 위해서라면 영의 말에 집중할 필요가 있으며 앞선 주의사항들을 명심해야만 합니다.
 
-++
+---
 
 오늘 예배 중에 저도 모르게 방언이 나왔습니다.
-수 년간 의식적으로 하지 않았고 그 이전에 했던 방언이라고 생각하는 것들도 거의 다 아무런 의미 없는 것으로 여기고 있었습니다.
+수 년간 방언을 의식적으로 하지 않았었고 그 이전에 했던 방언이라고 생각하는 것들은 거의 다 아무런 의미 없는 행위였을 거라고 생각하고 있었습니다.
 방언을 하면서 너무나도 마음이 아팠습니다.
-그 이유는 첫째로 하나님과 상관 없는 삶을 살면서 이 땅의 것과 어우러져 살아가고 있는 제 모습이 보였기 때문이고,
+그 이유는 첫째로 하나님과 상관 없는 삶을 살면서 이 땅의 것과 어우러지고 있는 제 모습이 보였기 때문이고,
 둘째로 도저히 숨을 쉴 수 없는 지경에 이른 내 영혼이 고통을 참다 못해 하소연하고 있는 것으로 느껴졌기 때문입니다.
-그리고 셋째로는 언제까지 이것을 반복하면 살아야 할까 고민하는 마음 때문이었습니다.
+그리고 셋째로는 언제까지 이것을 반복하면서 살아야 할까 고민하는 마음 때문이었습니다.
 
 물론 지금 당장 돌아가면 되지 않겠느냐는 생각도 있겠으나, 수고하고 무거운 짐을 제대로 내려놓기 위해서는
 그 무거운 짐의 무게를 한계치까지 명확하게 인지하는 과정이 선행되어져야 하기 때문에 그럴 수 없습니다.
@@ -88,25 +88,25 @@ image-view: true
 
 저는 드라마틱한 회심의 사건을 절대 믿지 않습니다.
 저뿐 아니라 대다수의 평범한 사람들은 하루하루를 살아내며 그분께로 조금씩 나아갑니다.
-물론 회심하기로 결단하는 시점은 존재하겠으나
-자신의 한계와 나약함으로 인해 수많은 좌절과 고통, 자괴감을 느끼면서도 포기하지 않고 조금씩 나아갑니다.
+물론 회심하기로 결단하는 시점은 존재하겠지만
+자신의 한계와 나약함으로 인해 수많은 좌절과 고통, 자괴감을 느끼면서도 포기하지 않고 조금씩 나아가는 과정이 필요합니다.
 단 번에 그분께로 돌아선다는 것은 그 만큼 쉽게 이전의 모습으로 돌아갈 수 있다는 것을 의미한다고 생각합니다.
 저에게도 드라마틱한 사건은 절대 없습니다. 몇 년 전에는 그러한 사건이 있기를 간구했으나 이제는 그것이 아무런 의미가 없다는 것을 알았습니다.
-이제는 특별한 무언가를 기다리기 보다는 날마다 나 자신과 부딛히며 올바른 방향성을 가지고 조금씩 나아갑니다.
+이제는 특별한 무언가를 기다리기 보다는 날마다 나 자신과 부딛히며 올바른 방향성을 가지고 조금씩 나아가려고 합니다.
 어느 시점까지는 이러한 고통의 과정을 계속해서 반복하겠지만 내 영혼에게 방언으로 기도할 기회를 주고,
 그와 어루어져 내 마음과 뜻도 진지하게 집중하는 것을 더 이상 금하지 않으며,
 그에 맞는 감동에 따라 행동하기를 주저하지 않는 것을 반복한다면 어느 새 굳건하게 돌아서 있는 제 자신을 발견하리라고 확신합니다.
 
-++
+---
 
 제 어머니는 방언으로 온 마음과 뜻을 다해 기도를 많이 하십니다.
 해장국을 만들면서도 입술은 방언을 말하고 마음과 뜻은 하늘을 향해 있습니다.
 하지만 최근 말씀드렸던 두 분의 암 환자 중 한 분이 돌아가셨을 때, 어머니는 큰 시험에 들었습니다.
 그 동안 자신이 생각하던 믿음의 의미가 깨져버렸기 때문입니다.
-어머니는 강력한 믿음을 가지고 선한 의도와 함께 병든 자가 낫기를 기도하면 무조건 낫게 된다고 믿는 순수한 사람이었습니다.
-그래서 하나님이 그 분이 돌아가신 것은 그 분에게 좋은 일이라고 말씀하셨을 때 그 의미를 이해하지 못했습니다.
+어머니는 강력한 믿음을 가지고 선한 의도와 함께 병든 자의 치유를 간구하면 무조건 낫게 된다고 믿는 순수한 사람이었습니다.
+그래서 하나님이 **그 분이 돌아가신 것은 그 분에게 좋은 일이라고 말씀하셨을 때** 그 의미를 이해하지 못했습니다.
 
-하지만 왠지 모르게 저는 알았습니다. 어머니가 그 분을 위해 방언으로 기도할 때 하나님 안에서의 평온하게 죽을 것을 간구하고 있었다는 것을.
+하지만 왠지 모르게 저는 알았습니다. 어머니가 그 분을 위해 방언으로 기도할 때 하나님 안에서의 평온한 죽음을 간구하고 있었다는 것을.
 실제로 그 분은 굉장히 고통스러워야 할 죽음의 그 순간에 기도실에서 기도하다가 행복한 표정으로 정신이 떠나갔습니다.
 그 분과 하나님에게는 좋은 일이었겠으나, 중간에 기도하던 어머니는 굉장한 시험에 들었습니다.
 
@@ -117,7 +117,34 @@ image-view: true
 다행이도 어머니는 납득하고 시험든 마음이 풀어지는 것처럼 보였습니다. 지금까지도 보면 실제로 그런 것 같습니다.
 너무나도 순수하다 보니 일어난 해프닝? 정도로 생각합니다. 지금은 더욱 방언으로 하나님이 원하는 기도에 힘쓰고 있습니다.
 
-++
+---
 
 굉장히 글이 길어졌어요 ㅠ 쓰다보니 끝이 없네요. 그래도 말할 사람이 목사님밖에 없어 이렇게 씁니다.
 귀찮으시더라도 받아주시면 감사하겠습니다. 그럼 나머지 하루 행복하세요^^
+<br/><br/><br/><br/>
+
+...
+
+<br/><br/><br/>
+re.
+
+두 번 읽었어. 근데 내가 어떤 답을 말을 해야할까? 이미 대성이 너가 자르일고 있는 것 같은데. 
+
+#### 1. 방언의 첫 번째 의의는 잃어버린 말씀을 찾았다는 것(말을 흩어버려 멸망시키신 바벨탑사건) 
+
+#### 2. 그 사건으로 인해 말의 해체 및 기쁜말씀(소식), 곧 복음이 세계로 전파되도록 함
+
+#### 3. 바울은 할 수 있다면 방언하는 게 좋다고 했고, 권면한 적 있잖아. 교회와 개인의 밸런스를 유지하는데 해가 되지 않도록 한다면 방언은 좋지.
+ 
+그런데 방언하는 사람 가운데 엉뚱한 분들이 많다는 것도 사실이야.
+
+기도는 하나님 뜻이 이뤄지는 거지? 
+요15:7. 내 느낌에 병애서 회복될 수 있겠다 싶어서 선한 마음으로 기도할 수 있지만 결과는 정 반대일 수 있어. 사실 그런 경우가 되게 많고.
+
+그런데 생사는 하나님에게 있고, 설령 병자가 회복 된다고 하더라도 결국은 죽음이 인간의 운명이잖아. 
+병이 낫는 것만이 하나님의 응답은 아니지? 마음 아픈거야 말로 다 할 수 없지만 시간이 지나고 나면 깨닫는 게 인간이잖아.
+
+하나님은 언제나 한걸음씩 인도하셔.
+청사진 제시하고 상황 이해시켜서 움직이게 하지 않으시더라고. 그래야 믿음이니까. 믿을 수 없는 중에 하나님을 믿음으로... 
+
+대성아, 잘하고 있어.
