--- a/_posts/to-demian/2020-06-14-to-demian.markdown
+++ b/_posts/to-demian/2020-06-14-to-demian.markdown
@@ -14,7 +14,7 @@ image-view: true
 
 <br/>항상 소식을 접할 때마다 눈물이 나며 가슴이 뜨거워 집니다.
 
-목사님 편지 '평화는 모두의 것이기에 11' 을 받고 일주일동안 고민하며 살았습니다.
+**님 편지 '평화는 모두의 것이기에 11' 을 받고 일주일동안 고민하며 살았습니다.
 예수 '믿는' 사람들의 여정 속에서 우리는 어디쯤에 있는 것일까.
 적어도 하나님으로부터 온 기도제목을 가진 사람은 자신으로부터 나온 기도제목을 가진 사람보다 더 먼저 길을 떠난 사람임에 틀림 없습니다.
 기독교를 종교로 가진 사람들은 서로 기도제목 나누기를 즐겨 하는데, 저는 그럴 때마다 특별히 할말이 없습니다.
@@ -26,14 +26,14 @@ image-view: true
 물론 쉼은 필요하지만, 그것이 과도해져 하루의 너무 많은 부분을 차지하게 되면 영혼 돌아보는 일에 소홀해지는 것 같습니다.
 이후부터는 적당히 쉬고, 이런저런 일들을 해야겠습니다.
 
-목사님이 처한 환경은 척박한 땅에서 돌베개만 베고 자는 것과 같네요.
+**님이 처한 환경은 척박한 땅에서 돌베개만 베고 자는 것과 같네요.
 지금의 저와 같은 자유로움과 편안함은 적겠지만 영혼을 돌아보고 한 곳을 응시하기에는 최적의 환경인 것 같습니다.
 저는 절대 갈 수 없지만 한편으로 부럽기도 합니다.
 군더더기가 모두 사라지고 하나님 한 분만을 바라볼 수 있는 곳.
 하나님과 일대 일의 관계를 지속할 수 있는 곳.
 사도 요한이 성령과 더불어 환상을 본 바로 그 곳...
 
-사모님과 선*가 한국으로 가 있다니,
+**님과 선\*가 한국으로 가 있다니,
 그럼 혼자서 외로우실 법도 한데 언어/문화적 한계를 극복하고자
 영적 힘을 키우는 목표를 세우고 힌디어 공부와 함께 실천하고 계시는 모습이 저에게 많은 도전이 됩니다.
 저도 이직과 영어공부를 위해 나름대로 노력하고 있지만 더 구체적으로 힘써야겠다는 생각이 듭니다.
@@ -44,7 +44,7 @@ image-view: true
 그분은 물론 합력하여 선을 이루겠지만, 인간적으로는 상당히 고통스러운 과정을 감내하셔야 할것 같아서 입니다.
 그것에 대한 영적, 마음적 준비도 하시겠지만, 그 못지 않게 세분 모두 육체적으로도 아프지 않고 강건하시기를 기도합니다.
 
-목사님, 지금 한국 교회의 상황은 이루 말할 수가 없습니다.
+**님, 지금 한국 교회의 상황은 이루 말할 수가 없습니다.
 40 ~ 60% 의 성도들이 교회에 오지 않고 있습니다.
 모두 집에 편안히 앉아 온라인 예배를 드립니다.
 물론 편안히 집에서 예배드리는 것이 문제라는 것은 아닙니다.
