to-demian: Modify posts

--- a/_posts/to-demian/2019-10-24-to-demian.markdown
+++ b/_posts/to-demian/2019-10-24-to-demian.markdown
@@ -44,3 +44,25 @@ image-view: true
 든든한 동역자와 친구들도 많이 생기기를 바랍니다. **님, **님, 선\* 모두에게요.
 
 라대성 드림.
+<br/><br/><br/>
+
+...
+
+<br/><br/>
+re.
+
+로고스를 떠올리면 언어는 참 중요해.
+대성이도 해외 이직 준비하는구나^^
+잘할거야! 참... 공부한 뒤에는 사람들과 대화에서 사용해야 각인이 되더라.
+책상에서 아무리 외워도 사용하지 않으면 잘 안 나오는 것 같아. 언어는 근육운동 같은 거니까. 
+
+그리고 인도는 좀 달라. 한국과는 많이. 사람들이 너무 순수해. 불만도 별로 없어.
+다만 지역에 따른 차별이 존재해. 인종차별이 지역에 따라 달라져.
+예를 들면 인도 북동부 지역(미조람.마니푸르) 사람들은 인도에서 사람 취급을 받지 못하고 있어.
+외국인의 눈으로 보면 이해가 안 되지만서도...
+
+그 사람들이 많은 지역이 내가 이사가는 지역이야^^ 상처가 많아.
+위로자가 필요한 사람들이야. 전도의 개념이 아니라... 친구?가 되어주는거지. 나도 친구로서 다가갈거고. 
+
+잘 지내고 있지 대성아? 
+좋은 계절이다. 행복해!
