demian-post: Change frontdoor content

--- a/_posts/to-demian/2019-07-07-to-demian.markdown
+++ b/_posts/to-demian/2019-07-07-to-demian.markdown
@@ -10,7 +10,7 @@ image-view: true
 
 > 새는 알에서 나오기 위해 투쟁한다.<br/>
 > 알은 세계다.<br/>
-> 태어나고자 하는 모든 이는 먼저 하나의 세계를<br/>파괴하지 않으면 안 된다.
+> 태어나는 이는 먼저 하나의 세계를<br/>파괴하지 않으면 안 된다.
 
 <br/>고린도전서 12장에서 14장을 찬찬히 읽어보니 바울은 방언 자체를 특별하게 생각하지도(13:1, 8, 9),
 그렇다고 필요 없는 것으로 생각하지도 않는 것 같습니다(12:10).
