--- a/_posts/to-demian/2019-10-24-to-demian.markdown
+++ b/_posts/to-demian/2019-10-24-to-demian.markdown
@@ -10,7 +10,7 @@ image-view: true
 
 > 새는 알에서 나오기 위해 투쟁한다.<br/>
 > 알은 세계다.<br/>
-> 태어나고자 하는 모든 이는 먼저 하나의 세계를<br/>파괴하지 않으면 안 된다.
+> 태어나는 이는 먼저 하나의 세계를<br/>파괴하지 않으면 안 된다.
 
 <br/>안녕하세요 **님.
 
