post: Modify contents in daily/dilemma

--- a/_posts/daily/2020-07-24-dilemma.markdown
+++ b/_posts/daily/2020-07-24-dilemma.markdown
@@ -12,29 +12,30 @@ image-view: true
 
 박원순이라는 정치인이, 변호사가, 운동가가 죽었다.<br>
 오늘로 2주하고 하루가 지났다.<br>
-그리고 지금은 공교롭게도 노회찬이 죽은지 꼭 일 년 하고도 하루가 지나는 시점이다.
+그리고 지금은 공교롭게도 노회찬이 죽은지 꼭 이 년 하고도 하루가 지나는 시점이다.
 
 같은 듯 다른 이 두 인물의 마지막을 보며,
 이 땅을 살아가는 깨어있는 자들은 적지 않은 고뇌 속에 잠기리라.
 
 우리는 이것을 어떻게 이해할 것인가?<br>
 우리는 어떤 정치적 입장을 취할 것인가?<br>
-...우리는...
+우리는...
 
-모두 쓰레기다.
+우리는 모두 쓰레기다.
 
 ### 2018년 07월 25일에 쓴 글
 
-우리가 수없이 많이 보아 온 것처럼, 세상이라는 바다에는 ```사실```과 ```진실```이 서로 마주보고 멀어져 있는 쌍둥이 섬처럼 떠 있다. 
-
 나는 노회찬을 직접 알지는 못한다.<br>
-그나마 알고 있는 행적의 파편들, 영상물로 보던 그의 언행 등을 통해 형성된 개인적인 존경에 기반해서 이 글을 기록한다.<br>
-나는 그가 ```사회정의를 갈망하는 사람```이었다고 믿는다.
+그나마 알고 있는 행적의 파편들, 영상물로 보던 그의 언행 등을 통해 형성된 개인적인 존경심에 기반하여 이 글을 기록한다.<br>
 
+우리가 사는 이 세상은 망망대해와 같다.
+수없이 많이 보아 왔던 것처럼, 이 바다에는 ```사실```과 ```진실```이란 이름의 쌍둥이 섬이 서로 마주보며 떠 있다. 
+
+나는 노회찬이 ```사회정의를 갈망하는 사람```이었다고 믿는다.
 모든 인간은 완벽할 수 없다는 불변의 진리 속에서, 언제나 진심으로 정의를 갈망했던 한 사람이 직면한 ```부정의```는 
-자신에게 있어서 도저히 참을 수 없는 존재의 가벼움이었다.
+자신에게 있어서 도저히 참을 수 없는 존재의 가벼움인 것이다.
 
-그가 5천만원에 가까운 정치자금을 불법적으로 받은 것은 사실인 듯 하다(직접 진술하기도 했고).
+그가 직접 진술했듯이, 5천만원에 가까운 정치자금을 불법적으로 받은 것은 사실인 듯 하다.
 맥락과 진의가 어떻든 간에 이러한 사실은 서서히 그의 목을 조르다 마침내 두 가지 선택의 기로에 놓이게 만들었다.
 둘 중 하나의 선택을 내적으로 강요받으며 그는 시간이 지나면 이러한 사실이 조용히 뭍혀버리지나 않을까 하는
 인간적 소망을 잠시 가져보지 않았을까.
@@ -49,7 +50,7 @@ image-view: true
 경중에 관계없이 돈에 관한 위법을 저지른 비도덕한 정치인은 더 이상 정치가 불가능하다(그런데 저들은 왜이렇게 뻔뻔할까).
 그러므로 그는 자신의 양심을 따라 위법사실을 시인하고 정치계를 떠나는 이 선택지를 두고 많은 고민을 했을 것이다.
 
-정치를 그만두는 것은 둘째 치더라도, 이 사실을 둘러싸고 그를 범죄자라고 욕하는 사람, 나아가 진보계 전체를 싸잡아 욕하는 사람,
+정치를 그만두는 것은 둘째 치더라도, 이 사실을 둘러싸고 그를 범죄자라고 비난하는 사람, 나아가 진보계 전체를 싸잡아 욕하는 사람,
 반대로 그럴 수밖에 없던 이유를 대며 옹호하는 사람, 일반화하지 말라고 하는 사람 등 수많은 입방아에 오르내릴 것이 자명했다.
 노회찬은 욕을 하던 옹호를 하던 그 모든 것들이 싫었을 것이다.
 그리고 저 뻔뻔한 사람들과 자신을 동률로 보는 시각이 생겨나는 것도 도저히 견디기 어려웠을 것이다.
