--- a/_posts/javascript/2020-06-08-js-event.markdown
+++ b/_posts/javascript/2020-06-08-js-event.markdown
@@ -6,6 +6,8 @@ categories: javascript
 permalink: "/javascript/:year/:month/:day/:title"
 image: spools.jpg
 image-view: true
+image-author: none
+image-source: ''
 ---
 
 ## 들어가며
