--- a/_posts/daily/2020-07-24-dilemma.markdown
+++ b/_posts/daily/2020-07-24-dilemma.markdown
@@ -4,8 +4,10 @@ date:   2020-07-24 22:27:30 +0900
 author: namu
 categories: daily
 permalink: "/daily/:year/:month/:day/:title"
-image: bicycle_01.jpg
+image: https://cdn.pixabay.com/photo/2017/12/28/16/18/bicycle-3045580_1280.jpg
 image-view: true
+image-author: Engin_Akyurt
+image-source: https://pixabay.com/ko/users/Engin_Akyurt-3656355/
 ---
 
 ### 서울시장이 죽었다
