--- a/_posts/etc/2020-08-21-my-plan.markdown
+++ b/_posts/etc/2020-08-21-my-plan.markdown
@@ -4,8 +4,8 @@ date:   2020-08-21 19:51:36 +0900
 created: 2020-08-21 19:51:36 +0900
 updated: 2020-08-22 18:58:26 +0900
 author: namu
-categories: daily
-permalink: "/daily/:year/:month/:day/:title"
+categories: etc
+permalink: "/etc/:year/:month/:day/:title"
 image: https://cdn.pixabay.com/photo/2016/03/27/20/55/arm-1284248_1280.jpg
 image-view: true
 image-author: Pexels
