--- a/_posts/algorithm/2020-09-02-2020kakao-01.markdown
+++ b/_posts/algorithm/2020-09-02-2020kakao-01.markdown
@@ -36,7 +36,7 @@ image-source: https://tech.kakao.com/blog/
 * 입출력 예
 
     | s	| result |
-    |:--------|:----|
+    |--------|----|
     | ```"aabbaccc"``` -> ```"2a2ba3c"``` | 7 |
     | ```"ababcdcdababcdcd"``` -> ```"2ababcdcd"``` | 9 |
     | ```"abcabcdede"``` -> ```"2abcdede"``` | 8 |
@@ -63,11 +63,11 @@ image-source: https://tech.kakao.com/blog/
 <br>
 ## 출제 의도
 
-- 문자열을 다룰 수 있고, 아래 예시와 같이 문자열과 관련된 다양한 작업을 할 수 있는지 파악
-    - 문자열 자르기
-    - 부분 문자열 얻기
-    - 문자열 비교하기
-    - 문자열 길이 얻기
+문자열을 다룰 수 있고, 아래 예시와 같이 문자열과 관련된 다양한 작업을 할 수 있는지 파악
+- 문자열 자르기
+- 부분 문자열 얻기
+- 문자열 비교하기
+- 문자열 길이 얻기
 
 <br>
 ## 문제 풀이
