post: Add dynamic algorithm solutions

--- a/_posts/algorithm/2020-09-14-dynamic.markdown
+++ b/_posts/algorithm/2020-09-14-dynamic.markdown
@@ -28,7 +28,7 @@ image-source: https://pixabay.com/ko/users/200degrees-2051452/
 
 [안경잡이개발자](https://ndb796.tistory.com/)님의
 [이것이 취업을 위한 코딩테스트이다 with python 유튭 강의](https://www.youtube.com/watch?v=vRFXpqWDbRU&list=PLRx0vPvlEmdBFBFOoK649FlEMouHISo8N&index=5)에서
-발췌했다.
+참조했다.
 
 <br>
 ## Dynamic programming
@@ -145,9 +145,9 @@ def loop_init_f(n):
 
 앞서 다이나믹 프로그래밍은 ['최적부분구조'와 '중복되는 부분'](#dynamic-programming) 의 특성이 있다는 것을 살펴보았다.
 
-**분할 정복** 알고리즘은 DP 와 같이 최적부분구조(작은 문제들로 구성된 큰 문제)의 특성을 가지는 공통점이 있지만,
-중복 부분이 존재하지는 않는다. 작게 반복되는 알고리즘은 존재하는 반면 중복되는 부분 연산이 없기 때문에
-캐싱과 같은 기법을 활용할 수 없다는 점을 기억해야 한다. 분할 정복 알고리즘의 대표적인 예가 퀵정렬이다.
+**분할 정복** 알고리즘은 DP 와 같이 최적부분구조(작은 문제들로 구성된 큰 문제)의 특성을 가지지만,
+중복 부분이 존재하지는 않는다. 한번 분할된 어느 한 부분은 중복해서 사용되는 일이 없기 때문에
+메모이제이션과 같은 기법을 활용할 수 없다는 점을 기억해야 한다. 이 알고리즘의 대표적인 예가 퀵정렬이다.
 
 **퀵정렬**: 기준 원소(pivot)에 대해 분할된 각 부분에 대해 같은 분할작업을 반복 수행한다.
 같은 원소에 대한 분할은 중복수행하지 않으면서 작은 분할이 큰 분할을 구성하는 최적부분구조라 할 수 있다.
@@ -187,12 +187,64 @@ main(nums)
 퀵정렬은 대부분의 프로그래밍 언어의 sort() 함수에서 활용하는 기법이다.
 **이상적인 pivot 값이 선택되었을 때 가장 효율적이고 처리속도가 빠르기 때문**이다( -> O(NlogN) ).
 하지만 사례 원소 수가 적어 pivot 선택이 한쪽으로 치우치게 되면 효율성이 급격히 떨어질 수도 있다( -> O(N^2) ).
-그래서 보통 퀵정렬과 함께 특정 조건 하에 다른 정렬 알고리즘을 활용하도록 구현된다.
+그래서 보통 퀵정렬과 함께 병합 정렬과 같은 알고리즘을 함께 활용하도록 구현된다.
 
 <br>
 ## 예제 풀이
 
-최적 부분 구조를 가지는 위 알고리즘들을 활용한 예제를 살펴보기 위해 안경잡이개발자 강의와
-[zerocho.com](https://www.zerocho.com/category/Algorithm/post/584b979a580277001862f182) 을 참조하였다.
+다이나믹 프로그래밍 알고리즘을 활용한 다음의 예제들을 살펴보자.
 
-**막대기 자르기**: 
+**개미 전사**: 개미 전사가 일직선으로 이어진 창고들을 털때,
+서로 인접하지 않은(최소 한칸 이상 떨어진) 창고들을 공략하면서 확보할 수 있는 가장 많은 양의 식량 구하기.
+N 번째 창고까지 턴다고 가정한다.
+
+풀이 아이디어는 주어진 N 보다 작은 i 번째 창고까지의 최대 식량 개수를 중복 활용하는 것이다.<br>
+i 일때 _i - 3_ 번째 창고는 무조건 털 수 있으므로 _i - 2_ 번째와 _i - 1_ 번째 중 더 큰값을 구하면 된다.
+_i - 2_ 일때는 i 번째 값을 포함하고, _i - 1_ 일때는 인접하므로 포함하지 않는다.
+
+```python
+house_list = [1, 3, 1, 5, 6, 5, 8, 2, 3, 1, 9]
+def solution(houses, N):
+    d = [0] * (N + 1)  # max count until 'i'
+    d[0] = 0
+    d[1] = houses[0]
+    d[2] = max(houses[1], houses[2])
+    for i in range(3, N + 1):
+        d[i] = max(d[i - 1], d[i - 2] + houses[i - 1])
+    return d[N]
+```
+
+- 주어진 창고의 연속 리스트 _houses_ 를 차례로 하나씩 탐색하며 가장 큰 값(max)을 구한다
+- **중복 부분의 특성**에 따라 각 인덱스의 최대값을 메모이제이션하기 위하여, 주어진 N 크기의 최대값 리스트 _d_ 를 정의한다
+- 인덱스를 0이 아닌 1부터 시작하기 위하여 _d_ 의 0번 인덱스 값은 0으로 초기화 한다
+- 0번 인덱스 초기값을 제외하고 구해야 하기 때문에 _N + 1_ 만큼  **최적부분구조**로 반복한다
+
+**1로 만들기**: 주어진 정수 X 에 대해서 5, 3, 2 중 하나로 나누어 떨어지면 그것으로 나누는 연산과 1 을 빼는 연산을 활용하여 값을 1로 만들 때,
+연산을 사용하는 횟수의 최소값 구하기
+
+```python
+def make_one_solution(X):
+    d = [0] * (X + 1)  # d[0] and d[1] is 0
+    for i in range(2, X + 1):  # 상향식 역추적
+        d[i] = d[i - 1] + 1  # 1 빼는 경우
+        if i % 2 == 0:
+            d[i] = min(d[i], d[i // 2] + 1)  # 2 로 나누어 떨어지는 경우
+        if i % 3 == 0:
+            d[i] = min(d[i], d[i // 3] + 1)  # 3 로 나누어 떨어지는 경우
+        if i % 5 == 0:
+            d[i] = min(d[i], d[i // 5] + 1)  # 5 로 나누어 떨어지는 경우
+    return d[X]
+```
+
+이 문제는 그리디로 보일 수 있으나, '**순서에 관계 없이**' 그리고 '**최소연산횟수**' 의 조건으로 인해
+단순히 탐욕적으로 따라가는 방식으로는 결과값을 알수 없게 되었다.<br>
+주어진 수 X 에 대하여 1부터 뺄지 5로 나눌지 바로 알 수는 없기 때문이다.
+
+이 문제는 **메모이제이션을 활용한 다이나믹 프로그래밍**을 활용해 **보텀업 방식**으로 풀 수 있다.
+주어지는 수가 0 일 때, 1 일 때, 2 일 때, ... 순으로 역추적하여 각각의 최소연산횟수를 캐싱하는 것이다.
+
+X = 0 일 때 결과값 0, X = 1 일 때 결과값 0 으로 초기화하고(문제의 조건 중 해결 방법이 없음),
+보텀업 방식으로 풀면 특정 인덱스 i 에 대하여 i - 1 의 값을 사전에 알기 때문에
+이전 인덱스의 결과값으로부터 최소 횟수인 1 만을 증가시킬 수 있는 다음 연산조건이 어떤 것인지 파악 가능하다.
+
+위 코드의 반복문 안에서는 보텀업 방식이기 때문에 각 인덱스를 추적할 때마다 최소횟수인 1 을 더했다.
