--- a/_posts/web/2020-09-14-restful.markdown
+++ b/_posts/web/2020-09-14-restful.markdown
@@ -3,8 +3,8 @@ title:  "REST, RESTful, Flask-RESTful"
 created:   2020-09-14 19:39:14 +0900
 updated:   2020-09-20 15:51:25 +0900
 author: namu
-categories: computer-science
-permalink: "/computer-science/:year/:month/:day/:title"
+categories: web
+permalink: "/web/:year/:month/:day/:title"
 image: https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=http%3A%2F%2Fcfile6.uf.tistory.com%2Fimage%2F216CED33596713631F9267
 image-view: true
 image-author: sjh836.tistory.com
