--- a/_posts/python/2020-10-28-path.markdown
+++ b/_posts/python/2020-10-28-path.markdown
@@ -27,10 +27,11 @@ image-source: https://pixabay.com/ko/users/729714-729714/
 <br>
 ## os.path
 
-운영체제 종속 기능을 사용하는 이식성 있는 여러 툴들을 제공하는 ```os``` 패키지의 경로 관리 모듈이 ```os.path```입니다.
-위에서 언급했듯이 ```pathlib``` 가 본격적으로 사용되기 이전까지 일반적인 경로탐색 방식이었습니다.
+일단 ```os``` 패키지는 운영체제 종속 기능을 사용하는 이식성 있는 여러 툴들을 제공합니다.
+그리고 ```os``` 의 경로 관리 모듈이 ```os.path```입니다.
+위에서 언급했듯이 이것은 ```pathlib``` 가 본격적으로 사용되기 이전까지 일반적인 경로관리 방식이었습니다.
 
-### os.path.join() os.path.abspath()
+### os.path.join(), os.path.abspath()
 
 ```python
 import os
@@ -53,4 +54,34 @@ print(abs_file_path)  # /absolute/my/dir/my_file_name.txt
 따라서 ```abs_file_path``` 는 ```file_path``` 의 숨겨진 절대경로를 모두 나타냅니다.
 만약 ```file_path``` 가 이미 절대경로라면 동일한 문자열을 반환하겠죠?
 
-### os.path.dirname() os.path.basename() os.path.split()
+### os.path.dirname(), os.path.basename(), os.path.split()
+
+```python
+import os
+
+
+my_dir = os.getcwd()  # current path. 'pwd' in posix system
+my_file_name = 'my_file_name.txt'
+file_path = os.path.join(my_dir, my_file_name)
+
+dir_name = os.path.dirname(file_path)
+print(dir_name)  # /my/dir/name/
+
+file_name = os.path.basename(file_path)
+print(file_name)  # my_file_name.txt
+
+split_file = os.path.split(file_path)
+print(type(split_file))  # <class 'tuple'>
+print(split_file)  # ('/my/dir/name/', 'my_file_name.txt')
+```
+
+```os.path.dirname()``` 함수는 입력받은 문자열의 디렉토리 경로를 문자열로 반환합니다.
+여기서 만약 파일명이 포함되어 있다면 그것은 제외됩니다.
+
+이와 반대로 ```os.path.basename()``` 함수는 디렉토리 경로를 제외하고 파일명만을 문자열로 반환합니다.
+
+마지막으로 ```os.path.split()``` 함수는 입력받은 경로를 분리합니다.
+분리 형태는 ```(head, tail)``` 형태의 튜플인데, tail 은 경로의 가장 마지막에 있는 요소입니다.
+그리고 슬래시(/)를 포함하지 않기 때문에, 입력받은 경로가 슬래시로 끝난다면 tail 은 빈 값으로 출력됩니다.
+반대로 입력받은 경로에 슬래시가 하나도 없다면 head 쪽이 빈 값으로 출력됩니다.
+head 는 tail 을 제외한 앞의 모든 요소입니다.
