--- a/_posts/python/2020-10-28-path.markdown
+++ b/_posts/python/2020-10-28-path.markdown
@@ -31,7 +31,7 @@ image-source: https://pixabay.com/ko/users/729714-729714/
 그리고 ```os``` 의 경로 관리 모듈이 ```os.path```입니다.
 위에서 언급했듯이 이것은 ```pathlib``` 가 본격적으로 사용되기 이전까지 일반적인 경로관리 방식이었습니다.
 
-### os.path.join(), os.path.abspath()
+### 경로 결합, 절대경로 구하기
 
 ```python
 import os
@@ -54,7 +54,7 @@ print(abs_file_path)  # /absolute/my/dir/my_file_name.txt
 따라서 ```abs_file_path``` 는 ```file_path``` 의 숨겨진 절대경로를 모두 나타냅니다.
 만약 ```file_path``` 가 이미 절대경로라면 동일한 문자열을 반환하겠죠?
 
-### os.path.dirname(), os.path.basename(), os.path.split()
+### 디렉토리명, 파일명 구하기
 
 ```python
 import os
@@ -85,3 +85,74 @@ print(split_file)  # ('/my/dir/name/', 'my_file_name.txt')
 그리고 슬래시(/)를 포함하지 않기 때문에, 입력받은 경로가 슬래시로 끝난다면 tail 은 빈 값으로 출력됩니다.
 반대로 입력받은 경로에 슬래시가 하나도 없다면 head 쪽이 빈 값으로 출력됩니다.
 head 는 tail 을 제외한 앞의 모든 요소입니다.
+
+<br>
+## pathlib
+
+이제 살펴볼 것은 ```Path``` 객체를 사용하는 ```pathlib``` 패키지입니다.
+다음 설명은 [```pathlib```](https://docs.python.org/3/library/pathlib.html) 공식문서의 일부입니다.
+
+> 이 모듈은 서로 다른 운영 시스템에 의미적으로 적합한 파일 시스템 경로를 나타내는 클래스를 제공합니다.
+> ```Path``` 클래스는 I/O 작업 없이 순전히 (경로)계산만을 위한 
+> [pure paths](https://docs.python.org/3/library/pathlib.html#pure-paths) 부분과,
+> pure paths 를 상속하지만 I/O 작업을 제공하는 
+> [concrete paths](https://docs.python.org/3/library/pathlib.html#concrete-paths) 부분으로 나눠집니다.
+
+![Path class in pathlib](https://docs.python.org/3/_images/pathlib-inheritance.png)
+
+일단 기본적으로는 ```Path``` 클래스를 활용한다고 생각하면 좋습니다.
+그럼 내부적으로 운영체제에 맞춰서 PosixPath 혹은 WindowsPath 객체가 사용됩니다.
+
+### 경로 결합, 절대경로 구하기
+
+```python
+from pathlib import Path
+
+
+my_dir = Path.cwd()  # same as os.getcwd()
+my_file_name = 'my_file_name.txt'
+
+file_path = Path(my_dir, my_file_name)  # Path(my_dir / my_file_name)
+print(file_path)  # /my/dir/my_file_name.txt
+file_path = my_dir / my_file_name
+print(file_path)  # /my/dir/my_file_name.txt
+
+abs_file_path = Path.resolve(file_path)
+print(abs_file_path)  # /absolute/my/dir/my_file_name.txt
+```
+
+```Path``` 클래스를 인스턴스화하여 원하는 경로를 조합할 수 있습니다.
+또한 ```Path``` 클래스에 ```/```(슬래시) 연산자를 사용해도 동일한 결과를 얻습니다.
+이것은 경로를 조합한다는 면에서 ```os.path.join()``` 과 같은 효과를 발휘합니다.
+(연산자에 대한 자세한 설명은 [```Operators```](https://docs.python.org/3/library/pathlib.html#operators) 를 참조하세요)
+
+그리고 ```Path``` 객체에서 절대 경로를 구할때는 ```Path.resolve()``` 함수를 사용합니다.
+
+### 디렉토리명, 파일명 구하기
+
+```Path``` 객체의 디렉토리 경로를 구하기 위해 ```parent``` 어트리뷰트를 사용합니다.
+만약 경로에 파일명이 포함되어 있다면 해당 파일의 디렉토리 경로가, 아니라면 현재 디렉토리의 상위 디렉토리 경로가 반환됩니다.
+
+```python
+from pathlib import Path
+
+my_dir = Path.cwd()  # same as os.getcwd()
+my_file_name = 'my_file_name.txt'
+file_path = my_dir / my_file_name
+
+parent_name = file_path.parent
+print(parent_name)  # Print 'my_dir' path
+print(parent_name.parent)  # parent path of 'my_dir'
+```
+
+마지막 라인과 같이 ```parent``` 어트리뷰트를 반복 사용함으로써 더 상위 디렉토리의 경로를 얻을 수 있습니다.
+
+파일명과 관련된 정보를 구하기 위해서는, ```name```, ```stem```, ```suffix``` 어트리뷰트를 사용합니다.
+
+```python
+print(file_path.name)  # 'my_file_name.txt'
+print(file_path.stem)  # 'my_file_name'
+print(file_path.suffix)  # '.txt'
+```
+
+각각 파일명, 확장자를 제외한 파일명, 확장자 순입니다.
