--- a/_posts/python/2020-10-28-path.markdown
+++ b/_posts/python/2020-10-28-path.markdown
@@ -28,7 +28,7 @@ image-source: https://pixabay.com/ko/users/729714-729714/
 ## os.path
 
 일단 ```os``` 패키지는 운영체제 종속 기능을 사용하는 이식성 있는 여러 툴들을 제공합니다.
-그리고 ```os``` 의 경로 관리 모듈이 ```os.path```입니다.
+이 ```os``` 의 경로 관리 모듈이 ```os.path```입니다.
 위에서 언급했듯이 이것은 ```pathlib``` 가 본격적으로 사용되기 이전까지 일반적인 경로관리 방식이었습니다.
 
 ### 경로 결합, 절대경로 구하기
@@ -54,7 +54,7 @@ print(abs_file_path)  # /absolute/my/dir/my_file_name.txt
 따라서 ```abs_file_path``` 는 ```file_path``` 의 숨겨진 절대경로를 모두 나타냅니다.
 만약 ```file_path``` 가 이미 절대경로라면 동일한 문자열을 반환하겠죠?
 
-### 디렉토리명, 파일명 구하기
+### 디렉토리 경로, 파일명 구하기
 
 ```python
 import os
@@ -121,28 +121,28 @@ abs_file_path = Path.resolve(file_path)
 print(abs_file_path)  # /absolute/my/dir/my_file_name.txt
 ```
 
-```Path``` 클래스를 인스턴스화하여 원하는 경로를 조합할 수 있습니다.
+```Path``` 클래스를 인스턴스화 함으로써 원하는 경로를 조합할 수 있습니다.
 또한 ```Path``` 클래스에 ```/```(슬래시) 연산자를 사용해도 동일한 결과를 얻습니다.
 이것은 경로를 조합한다는 면에서 ```os.path.join()``` 과 같은 효과를 발휘합니다.
 (연산자에 대한 자세한 설명은 [```Operators```](https://docs.python.org/3/library/pathlib.html#operators) 를 참조하세요)
 
 그리고 ```Path``` 객체에서 절대 경로를 구할때는 ```Path.resolve()``` 함수를 사용합니다.
 
-### 디렉토리명, 파일명 구하기
+### 디렉토리 경로, 파일명 구하기
 
 ```Path``` 객체의 디렉토리 경로를 구하기 위해 ```parent``` 어트리뷰트를 사용합니다.
-만약 경로에 파일명이 포함되어 있다면 해당 파일의 디렉토리 경로가, 아니라면 현재 디렉토리의 상위 디렉토리 경로가 반환됩니다.
+만약 경로에 파일명이 포함되어 있다면 해당 파일의 디렉토리 경로가, 아니라면 입력된 디렉토리의 상위 디렉토리 경로가 반환됩니다.
 
 ```python
 from pathlib import Path
 
-my_dir = Path.cwd()  # same as os.getcwd()
+my_dir = Path.cwd()  # same as os.getcwd(), but returns a Path object
 my_file_name = 'my_file_name.txt'
 file_path = my_dir / my_file_name
 
-parent_name = file_path.parent
-print(parent_name)  # Print 'my_dir' path
-print(parent_name.parent)  # parent path of 'my_dir'
+parent_dir = file_path.parent
+print(parent_dir)  # Print 'my_dir' path
+print(parent_dir.parent)  # parent path of 'my_dir'
 ```
 
 마지막 라인과 같이 ```parent``` 어트리뷰트를 반복 사용함으로써 더 상위 디렉토리의 경로를 얻을 수 있습니다.
@@ -155,4 +155,43 @@ print(file_path.stem)  # 'my_file_name'
 print(file_path.suffix)  # '.txt'
 ```
 
-각각 파일명, 확장자를 제외한 파일명, 확장자 순입니다.
+각각 순서대로 파일명, 확장자를 제외한 파일명, 확장자를 의미합니다.
+
+<br>
+## File I/O
+
+파일을 정확히 다루기 위해서 경로 패키지들이 사용됩니다.
+이하에서는 ```os.path``` 와 ```pathlib``` 를 활용한 파일 다루기를 해보겠습니다.
+편의를 위해 Posix 시스템에서 '/home/namu' 디렉토리를 기반으로 하겠습니다.
+
+### os.path 활용
+
+```python
+import os
+
+
+my_dir = '/home/namu/'
+my_file_name = 'my_file_name.txt'
+file_path = os.path.join(my_dir, my_file_name)
+
+if not os.path.exists(my_dir):
+    print('Directory not exist. Create a new one.')
+    os.mkdir(my_dir)
+
+with open(file_path, 'a', encoding='utf-8') as f:
+    for i in range(5):
+        f.write(f'[{i + 1}] new line!\n')
+
+with open(file_path, 'r', encoding='utf-8') as f:
+    lines = f.readlines()
+    for line in lines:
+        print(line)
+
+if os.path.exists(file_path):
+    print('Removing file...')
+    os.remove(file_path)
+    print('Done.')
+```
+
+<br>
+## 시스템에 작업 디렉토리 등록하기
