--- a/_posts/algorithm-practical/2020-09-14-dynamic.markdown
+++ b/_posts/algorithm-practical/2020-09-14-dynamic.markdown
@@ -3,8 +3,8 @@ title:  "[알고리즘] Dynamic programming"
 created:   2020-09-14 23:09:11 +0900
 updated:   2020-09-20 18:21:24 +0900
 author: namu
-categories: algorithm
-permalink: "/algorithm/:year/:month/:day/:title"
+categories: algorithm-practical
+permalink: "/algorithm-practical/:year/:month/:day/:title"
 image: https://cdn.pixabay.com/photo/2017/11/12/18/32/book-2943383__480.png
 image-view: true
 image-author: 200degrees
