post: Add time-complexity of dijkstra

--- a/_posts/algorithm-theory/2021-04-11-dijkstra.markdown
+++ b/_posts/algorithm-theory/2021-04-11-dijkstra.markdown
@@ -133,4 +133,15 @@ def solution(self, graph, start_node):
 'A' 노드로부터 다른 모든 노드까지의 최단거리 자료구조가 출력됩니다.
 
 <br>
-## 점화식 및 시간복잡도
+## 시간복잡도
+
+시간복잡도의 Big-oh 방식은 알고리즘 성능에 있어서 최악의 경우를 고려하는 것이므로
+주어진 E개의 **모든 노드를 방문하게 될 때의 시간 복잡도 ```O(E)```** 입니다.
+
+또한 다음 방문할 노드를 결정하는 데 priority queue 를 사용하게 되는데,
+이것의 시간 복잡도는 ```O(logN)``` 입니다.
+
+따라서 **인접 노드 방문 시 매번 간선 가중치의 합으로 최단거리가 갱신되면서
+다음 노드가 추가될 때의 시간 복잡도 ```O(ElogE)```** 가 있게 됩니다.
+
+결국 우선순의 큐를 이용한 다익스트라 알고리즘의 시간 복잡도는 **```O(ElogE)```** 입니다.
